--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,16 @@
 html, body {
   height: 100%;
 }
-
+https://images.pexels.com/photos/19670/pexels-photo.jpg?cs=srgb&dl=pexels-miguel-%C3%A1-padri%C3%B1%C3%A1n-19670.jpg&fm=jpg
   
 body {
   margin: 0;
   padding: 0;
   position: relative;
   color:rgba(0, 0, 0, 0.5);
+  background-image: url("https://images.pexels.com/photos/19670/pexels-photo.jpg?cs=srgb&dl=pexels-miguel-%C3%A1-padri%C3%B1%C3%A1n-19670.jpg&fm=jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 header {
