--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,6 @@ footer{
   align-items: center;
   justify-content: center;
    text-align: center;
-  position: absolute;
   }
     
    h1 {
@@ -72,6 +71,8 @@ footer{
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
   position: absolute;
+  top: 20%;
+  left:20%;
   }
   @keyframes hone  { 
 0% {transform: translateY(0);}
@@ -90,6 +91,8 @@ footer{
   font-size: 70px;
   font-weight: 600;
   position: absolute;
+  top: 20%;
+  right:20%;
   }
   
  h3 {
@@ -103,6 +106,8 @@ footer{
   font-size: 60px;
   font-weight: 600;
   position: absolute;
+  bottom: 20% ;
+  left: 20%;
   }
 
  p {
@@ -119,6 +124,7 @@ footer{
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
   position: absolute;
+  top:30%;
   }
 
 iframe {
@@ -134,11 +140,12 @@ animation-name: movearound;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
   position: absolute;
+  top: 20%;
 }
 
 #logo {
-width: 200px;
-height:300px;
+width: 100px;
+height:150px;
 opacity: 0.5;
 animation-name: hone;
 	animation-duration: 8s;
@@ -147,6 +154,7 @@ animation-name: hone;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
   position: absolute;
+  top:20px;
 }
 
 #nw {
@@ -154,6 +162,7 @@ width: 100px;
 height:100px;
 opacity: 0.5;
 position: absolute;
+bottom:20px;
 }
 .imgcert {
   opacity: 0.5;
@@ -168,6 +177,8 @@ animation-name: movearound;
   width:70%;
   height:550px;
   position: absolute;
+  top:30px;
+  left:30px;
 }
 
 @keyframes movearound  { 
