--- a/styles.css
+++ b/styles.css
@@ -42,10 +42,7 @@ footer{
   font-size: 2rem;
   font-weight: 600;
   }
-  @keyframes hone  { 
-0% {transform: translateY(0);}
-100% {transform: translateY(100vh);}
-}
+ 
 		
 		
   h2 {
@@ -98,7 +95,10 @@ max-width: 100%;
 0% {transform: translateY(0);}
 100% {transform: translateY(-100vh);}
 }
-
+ @keyframes hone  { 
+0% {transform: translateY(0);}
+100% {transform: translateY(100vh);}
+}
 .cloud {
   opacity: 0.5;
   width:100vw;
@@ -115,6 +115,7 @@ animation-name: hone;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  top: 5px;
 }
 #cloudtwo {
 animation-name: movearound;
@@ -123,6 +124,7 @@ animation-name: movearound;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  bottom: 5px;
 }
 #cloudthree {
 animation-name: hone;
@@ -131,6 +133,7 @@ animation-name: hone;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  top: 5px;
 }
 
 #cloudfour {
@@ -140,6 +143,7 @@ animation-name: movearound;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  bottom: 5px;
 }
 
 #cloudfive {
@@ -149,14 +153,16 @@ animation-name: movearound;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  bottom: 5px;
 }
 #cloudsix{
-animation-name: movearound;
+animation-name: hone;
 	animation-duration: 6s;
 	animation-timing-function: linear;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  top: 5px;
 }
 #cloudseven {
 animation-name: movearound;
@@ -165,15 +171,17 @@ animation-name: movearound;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  bottom: 5px;
 }
 
 #cloudeight {
-animation-name: movearound;
+animation-name: hone;
 	animation-duration: 8s;
 	animation-timing-function: linear;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  top: 5px;
 }
 #cloudnine {
 animation-name: movearound;
@@ -182,6 +190,7 @@ animation-name: movearound;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  bottom: 5px;
 }
 
 #cloudten {
@@ -191,14 +200,16 @@ animation-name: movearound;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  bottom: 5px;
 }
 #cloudeleven {
-animation-name: movearound;
+animation-name: hone;
 	animation-duration: 11s;
 	animation-timing-function: linear;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  top: 5px;
 }
 #cloudtwelve {
 animation-name: movearound;
@@ -207,6 +218,7 @@ animation-name: movearound;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  bottom: 5px;
 }
 #cloudthirteen {
 animation-name: movearound;
@@ -215,14 +227,16 @@ animation-name: movearound;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  bottom: 5px;
 }
 #cloudfourteen {
-animation-name: movearound;
+animation-name: hone;
 	animation-duration: 14s;
 	animation-timing-function: linear;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  top: 5px;
 }
 #cloudfifteen {
 animation-name: movearound;
@@ -231,22 +245,25 @@ animation-name: movearound;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  bottom: 5px;
 }
 #cloudsixteen {
-animation-name: movearound;
+animation-name: hone;
 	animation-duration: 16s;
 	animation-timing-function: linear;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  top: 5px;
 }
 #cloudseventeen {
-animation-name: movearound;
+animation-name: hone;
 	animation-duration: 17s;
 	animation-timing-function: linear;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  top: 5px;
 }
 #cloudeighteen {
 animation-name: movearound;
@@ -255,6 +272,7 @@ animation-name: movearound;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  bottom: 5px;
 }
 #cloudnineteen {
 animation-name: movearound;
@@ -263,12 +281,14 @@ animation-name: movearound;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  bottom: 5px;
 }
 #cloudtwenty {
-animation-name: movearound;
+animation-name: hone;
 	animation-duration: 20s;
 	animation-timing-function: linear;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+  top: 5px;
 }
