--- a/styles.css
+++ b/styles.css
@@ -292,3 +292,203 @@ animation-name: hone;
 	animation-direction: alternate;
   top: 5px;
 }
+#cloud21 {
+animation-name: hone;
+	animation-duration: 21s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud22 {
+animation-name: hone;
+	animation-duration: 22s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud23 {
+animation-name: hone;
+	animation-duration: 23s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud24 {
+animation-name: hone;
+	animation-duration: 24s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud25 {
+animation-name: hone;
+	animation-duration: 25s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud26 {
+animation-name: hone;
+	animation-duration: 26s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud27 {
+animation-name: hone;
+	animation-duration: 27s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud28 {
+animation-name: hone;
+	animation-duration: 28s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud29 {
+animation-name: hone;
+	animation-duration: 29s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud30 {
+animation-name: hone;
+	animation-duration: 30s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud31 {
+animation-name: hone;
+	animation-duration: 31s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud32 {
+animation-name: hone;
+	animation-duration: 32s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud33 {
+animation-name: hone;
+	animation-duration: 33s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud34 {
+animation-name: hone;
+	animation-duration: 34s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud35 {
+animation-name: hone;
+	animation-duration: 35s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud36 {
+animation-name: hone;
+	animation-duration: 36s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud37 {
+animation-name: hone;
+	animation-duration: 37s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud38 {
+animation-name: hone;
+	animation-duration: 38s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud39 {
+animation-name: hone;
+	animation-duration: 39s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
+  #cloud40 {
+animation-name: hone;
+	animation-duration: 40s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+  top: 5px;
+  left: 1px; 
+  }
