--- a/styles.css
+++ b/styles.css
@@ -86,14 +86,18 @@ max-width: 100%;
 }
 
 img.cert {
+  margin:5vmin;
+  border: 5px solid black;
   opacity: 0.5;
   width:70vw;
   height:30vh;
   max-width: 100%;
 }
 img.certtall {
+  margin:5vmin;
+  border: 5px solid black;
   opacity: 0.5;
-  width:50vw;
+  width:70vw;
   height:50vh;
   
   }
