--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,8 @@ body {
 }
 
 header {
-background-color: rgba(0, 0, 0, 0.5);
+border: 5px solid black;
+background-color: yellow;
 display: flex;
 flex-direction: column;
 align-items: center;
