--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,14 @@ body {
 }
 
 header {
+margin-top: 5vmin;
+width: 90vw;
 border: 5px solid black;
 background-color: yellow;
 display: flex;
 flex-direction: column;
 align-items: center;
+text-align: center;
 }
 
 main{
