--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ header {
 margin-top: 5vmin;
 width: 90vw;
 border: 5px solid black;
-background-color: yellow;
+background-color: rgba(0, 0, 0, 0.8);
 display: flex;
 flex-direction: column;
 align-items: center;
