--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,11 @@ display: flex;
 flex-direction: column;
 align-items: center;
 text-align: center;
-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.7);
+box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.7);
 position:relative;
 z-index:99;
 opacity: 0.5;
+filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.9));
 }
 
 main{
@@ -85,7 +86,7 @@ img.cert {
   max-width: 100%;
   position:relative;
   z-index: 99;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.7);
+  box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.7);
 }
 img.certtall {
   margin:5vmin;
@@ -95,7 +96,7 @@ img.certtall {
   height:50vh;
   position: relative;
   z-index: 99;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.7);
+  box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.7);
   }
 div#certcon {
   width:100vw;
